--- a/pom.xml
+++ b/pom.xml
@@ -13,27 +13,22 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-
+    
     <dependencies>
-    <!-- 
+<!-- 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
-        
+ -->
+        <!--   will work with either servlet 2.5 or servlet-api 3.0.1 on Tomat 7  -->
         <dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
-		</dependency>
-        
-     -->
-        <dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
+			 <scope>provided</scope>
 		</dependency>
         
         <dependency>
