check servlet-api version 2.3

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,17 @@
     </properties>
     
     <dependencies>
+    
+        <!--   will work with either servlet 2.3, 2.5 or servlet-api 3.0.1 on Tomat 7  -->
+    
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
+        </dependency>
+ 
+    
 <!-- 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -23,13 +34,14 @@
             <scope>provided</scope>
         </dependency>
  -->
-        <!--   will work with either servlet 2.5 or servlet-api 3.0.1 on Tomat 7  -->
+        <!-- 
         <dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 			 <scope>provided</scope>
 		</dependency>
+         -->
         
         <dependency>
             <groupId>com.google.inject</groupId>
